Shared notebook visibility fixed

--- a/src/styles/components/_notebook-panel.scss
+++ b/src/styles/components/_notebook-panel.scss
@@ -42,6 +42,12 @@
         }
     }
 
+    /* User list */
+    &__item-share-list {
+        height: 100px;
+        overflow-y: auto;
+    }
+
     /* Utilities */
     .pnd-text {
         margin-bottom: $space;
